examples/errors/endless.ign
<program>
  <function name=rec>
    {rec()}
  </function>
  {rec()}
</program>